--- a/Crewd/src/main/res/layout/activity_fullscreen.xml
+++ b/Crewd/src/main/res/layout/activity_fullscreen.xml
@@ -51,17 +51,8 @@
         </LinearLayout>
 
         <TextView
-            android:layout_width="139dp"
-            android:layout_height="89dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/header"
-            android:id="@+id/textView"
-            android:layout_gravity="center_horizontal|top"
-            android:gravity="center_vertical|center_horizontal" />
-
-        <TextView
             android:layout_width="210dp"
-            android:layout_height="106dp"
+            android:layout_height="131dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/list_category"
             android:id="@+id/textView2"
@@ -73,6 +64,15 @@
             android:layout_height="230dp"
             android:id="@+id/listView"
             android:layout_gravity="right|center_vertical" />
+
+        <TextView
+            android:layout_width="225dp"
+            android:layout_height="104dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/header"
+            android:id="@+id/textView"
+            android:layout_gravity="left|top"
+            android:gravity="center_vertical|center_horizontal" />
 
     </FrameLayout>
 
