--- a/Crewd/src/main/res/layout-land/activity_fullscreen.xml
+++ b/Crewd/src/main/res/layout-land/activity_fullscreen.xml
@@ -54,16 +54,8 @@
             android:layout_width="339dp"
             android:layout_height="245dp"
             android:id="@+id/listView"
-            android:layout_gravity="center_vertical|right|top" />
-
-        <TextView
-            android:layout_width="256dp"
-            android:layout_height="64dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/list_category"
-            android:id="@+id/textView2"
-            android:gravity="center_horizontal"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical|right|top"
+            android:layout_marginTop="25dp" />
 
         <TextView
             android:layout_width="264dp"
@@ -71,8 +63,63 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/header"
             android:id="@+id/textView"
+            android:layout_gravity="left|right|top"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="25dp" />
+
+        <TextView
+            android:layout_width="339dp"
+            android:layout_height="64dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/list_category"
+            android:id="@+id/textView2"
+            android:gravity="center_horizontal"
+            android:layout_gravity="right|top"
+            android:layout_marginTop="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Total Workouts"
+            android:id="@+id/textView3"
             android:layout_gravity="left|top"
-            android:gravity="center_vertical|center_horizontal" />
+            android:layout_marginTop="105dp"
+            android:layout_marginLeft="20dp" />
+
+        <TextView
+            android:layout_width="151dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Best Time"
+            android:id="@+id/textView4"
+            android:layout_gravity="left|top"
+            android:layout_marginTop="185dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="152dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="22"
+            android:id="@+id/textView5"
+            android:layout_gravity="left|top"
+            android:layout_marginTop="140dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="152dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="6:50"
+            android:id="@+id/textView6"
+            android:layout_gravity="left|top"
+            android:layout_marginTop="220dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_horizontal" />
 
     </FrameLayout>
 
