--- a/Crewd/src/main/res/layout/activity_fullscreen.xml
+++ b/Crewd/src/main/res/layout/activity_fullscreen.xml
@@ -57,22 +57,69 @@
             android:text="@string/list_category"
             android:id="@+id/textView2"
             android:layout_gravity="left|top"
-            android:gravity="center_horizontal|bottom" />
+            android:gravity="center_horizontal|bottom"
+            android:layout_marginTop="70dp" />
 
         <ListView
-            android:layout_width="339dp"
+            android:layout_width="match_parent"
             android:layout_height="230dp"
             android:id="@+id/listView"
-            android:layout_gravity="right|center_vertical" />
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
 
         <TextView
-            android:layout_width="225dp"
-            android:layout_height="104dp"
+            android:layout_width="232dp"
+            android:layout_height="84dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/header"
             android:id="@+id/textView"
             android:layout_gravity="left|top"
-            android:gravity="center_vertical|center_horizontal" />
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_marginTop="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Total Workouts"
+            android:id="@+id/textView3"
+            android:layout_gravity="left|top"
+            android:layout_marginTop="100dp"
+            android:layout_marginLeft="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Best Time"
+            android:id="@+id/textView4"
+            android:layout_gravity="left|top"
+            android:layout_marginTop="100dp"
+            android:layout_marginLeft="220dp" />
+
+        <TextView
+            android:layout_width="151dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="22"
+            android:id="@+id/textView5"
+            android:layout_gravity="left|top"
+            android:layout_marginTop="130dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="108dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="6:50"
+            android:id="@+id/textView6"
+            android:layout_gravity="left|top"
+            android:layout_marginTop="130dp"
+            android:layout_marginLeft="220dp"
+            android:gravity="center_horizontal" />
 
     </FrameLayout>
 
