--- a/Crewd/src/main/res/layout-land/activity_fullscreen.xml
+++ b/Crewd/src/main/res/layout-land/activity_fullscreen.xml
@@ -23,7 +23,11 @@
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
-
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/lake5"
+            android:scaleType = "centerCrop" />
         <LinearLayout android:id="@+id/fullscreen_content_controls"
             style="?metaButtonBarStyle"
             android:layout_width="match_parent"
@@ -120,6 +124,16 @@
             android:layout_marginTop="220dp"
             android:layout_marginLeft="20dp"
             android:gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="\@DougKerr"
+            android:id="@+id/textView7"
+            android:layout_gravity="right|top"
+            android:textColor="#000000"
+            android:textSize="10dp" />
 
     </FrameLayout>
 
