--- a/Crewd/src/main/res/layout-land/activity_fullscreen.xml
+++ b/Crewd/src/main/res/layout-land/activity_fullscreen.xml
@@ -15,8 +15,7 @@
         android:textColor="#33b5e5"
         android:textStyle="bold"
         android:textSize="50sp"
-        android:gravity="center"
-        android:text="@string/first_content" />
+        android:gravity="center" />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
